WorldMapInstance & InstanceHandler refactoring - fixed instance handlers of open world maps never had their instance set - removed synchronization on instance creation - fixed sys message in Dark Poeta showed wrong amount of points from gathering - some concurrency fixes - removed redundant code in InstanceScoreInfo classes (there's still potential for more reduction)